use previous text to code conversion

--- a/python/docs/example-comrad_patch.ipynb
+++ b/python/docs/example-comrad_patch.ipynb
@@ -90,7 +90,7 @@
     "\n",
     "func_in_string = code_to_text(children_in_care)\n",
     "\n",
-    "func = text_to_code(func_in_string)\n",
+    "func = text_to_code(func_in_string, \"children_in_care\")\n",
     "\n",
     "fig = func(entered_care=67, in_care=32, left_care=44)\n",
     "\n"
